--- a/web/scss/app.scss
+++ b/web/scss/app.scss
@@ -46,7 +46,7 @@
     padding-bottom: 2em;
 }
 
-.hero {
+.hero, .footer {
     height: 400px;
     padding-top: 100px;
     margin-bottom: 2em;
@@ -68,7 +68,7 @@
         position: relative;
         z-index: 2;
 
-        h1, h4, a:link {
+        h1, h2, h4, a:link {
             color: rgba(255,255,255,1);
             text-shadow: 0.1em 0.1em 0.4em rgba(0,0,0,0.25);
         }
@@ -81,6 +81,18 @@
             display: inline-block;
             margin-right: 0.5em;
         }
+    }
+}
+
+.footer {
+    background: url("/etc/img/footer-yosemite.jpg");
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 0;
+    margin-top: 2em;
+
+    a {
+        text-decoration: underline;
     }
 }
 
